[gd_scene load_steps=3 format=3 uid="uid://crie0nx25jkyo"]

[ext_resource type="Script" path="res://scripts/ui/word_collection_ui.gd" id="1_ch0kt"]
[ext_resource type="FontFile" uid="uid://3lbgwnx18aru" path="res://assets/UI/Cubic_11.ttf" id="2_msk7l"]

[node name="WordCollectionUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ch0kt")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 576.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="IdiomSlots" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer" groups=["idiom_slot"]]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_msk7l")
theme_override_font_sizes/font_size = 36
text = "可用成語"

[node name="IdiomHints" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_msk7l")
theme_override_font_sizes/font_size = 36
text = "收集的漢字"

[node name="CollectedWords" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer" groups=["collected_words"]]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 8

[node name="Label3" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_msk7l")
theme_override_font_sizes/font_size = 24
text = "點擊文字放上成語欄
點擊成語欄卸下文字
按Q或Esc離開選單
"
